<resources>
    <string name="google_app_id">1:993100667963:android:ec1081bd80aeaaf0</string>
    <string name="app_name">Treasure Hunt</string>
    <string name="join">JOIN A HUNT</string>
    <string name="create_a_hunt">CREATE A HUNT</string>
    <string name="create_a_step">Create a step</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="welcome_message">Welcome to Treasure Hunt!</string>
    <string name="create_new_hunt_button">New Hunt</string>
    <string name="create_new_step_button">Add Step</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_step_dialog_title">Add a new step</string>
    <string name="new_step_dialog_latitude">Latitude: </string>
    <string name="new_step_dialog_longitude">Longitude: </string>
    <string name="new_step_dialog_name">Name: </string>
    <string name="new_step_dialog_question">Question: </string>
    <string name="new_step_dialog_correct_answer">Correct Answer: </string>
    <string name="new_step_dialog_bad_answers">Wrong answer: </string>
    <string name="new_step_dialog_latitude_hint">latitude</string>
    <string name="new_step_dialog_longitude_hint">longitude</string>
    <string name="new_step_dialog_name_hint">name</string>
    <string name="new_step_dialog_question_hint">question ?</string>
    <string name="new_step_dialog_correct_answer_hint">right Answer</string>
    <string name="new_step_dialog_bad_answers_hint">wrong Answer</string>
    <string name="end_message">You made it!</string>
    <!-- Strings related to Settings -->

    <string name="pref_cat_user">User Settings</string>
    <string name="pref_cat_app">App Settings</string>
    <string name="pref_username_title">Username</string>
    <string name="pref_username_dialogtitle">Username</string>
    <string name="pref_username_dialogmessage">Pick a username</string>
    <string name="pref_notification_title">Push Notifications</string>
    <string name="pref_notification_summary">Allow push notifications</string>
    <string name="title_activity_pick_step_position">Map</string>
</resources>
