<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/DialogStyle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_step_dialog_title"
        android:textSize="20sp"
        android:gravity="center"
        style="@style/TextViewCustom"
        />

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_step_dialog_latitude"
                            style="@style/TextViewCustom"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/EditTextCustom"
                            android:id="@+id/new_step_latitude"
                            android:hint="@string/new_step_dialog_latitude_hint"
                            android:inputType="number"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/TextViewCustom"
                            android:text="@string/new_step_dialog_longitude"/>
                        <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            style="@style/EditTextCustom"
                            android:id="@+id/new_step_longitude"
                            android:hint="@string/new_step_dialog_longitude_hint"
                            android:inputType="number"/>
                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/pick_step_position_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/ButtonCustom"
                    android:src="@drawable/ic_add_location_black_48dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_step_dialog_name"
                    style="@style/TextViewCustom"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/EditTextCustom"
                    android:id="@+id/new_step_name"
                    android:hint="@string/new_step_dialog_name_hint"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_step_dialog_question"
                    style="@style/TextViewCustom"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/EditTextCustom"
                    android:id="@+id/new_step_question"
                    android:hint="@string/new_step_dialog_question_hint"
                    android:inputType="textMultiLine"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_step_dialog_correct_answer"
                    style="@style/TextViewCustom"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/EditTextCustom"
                    android:id="@+id/new_step_correct_answer"
                    android:hint="@string/new_step_dialog_correct_answer_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_step_dialog_bad_answers"
                    style="@style/TextViewCustom"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/EditTextCustom"
                    android:id="@+id/new_step_bad_answer_1"
                    android:hint="@string/new_step_dialog_bad_answers_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_step_dialog_bad_answers"
                    style="@style/TextViewCustom"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/EditTextCustom"
                    android:id="@+id/new_step_bad_answer_2"
                    android:hint="@string/new_step_dialog_bad_answers_hint"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_step_dialog_bad_answers"
                    style="@style/TextViewCustom"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/EditTextCustom"
                    android:id="@+id/new_step_bad_answer_3"
                    android:hint="@string/new_step_dialog_bad_answers_hint"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_step_cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Cancel"/>

        <Button
            android:id="@+id/new_step_ok_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="OK"
            android:enabled="false"/>


    </LinearLayout>

</LinearLayout>