<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chiaraercolani.treasurehunt.StartMenuActivity"
    android:background="@drawable/start_menu_background">

    <TextView
        android:layout_margin="4dp"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/welcome_msg_id"
        android:layout_gravity= "center"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_join"
        android:text="@string/join"
        android:layout_gravity= "center"
        android:onClick="buttonClicked"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/welcome_msg_id"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_settings"
        android:text="@string/settings"
        android:layout_gravity= "center"
        android:onClick="buttonClicked"
        android:layout_below="@+id/btn_create"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create"
        android:text="@string/create_a_hunt"
        android:layout_gravity= "center"
        android:onClick="buttonClicked"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/btn_join"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />


</RelativeLayout>
